[package]
name = "maze_walk"
version = "0.1.0"
authors = ["UnlimitedHugs <unlimitedhugs@protonmail.com>"]
edition = "2018"

[patch."https://github.com/not-fl3/miniquad.git"]
miniquad = { path = "miniquad" }

[dependencies]
legion = { version = "0.4.0", default-features = false, features = ["codegen"] }
glam = "0.17.3"
miniquad = { path = "miniquad" }
rand = "0.8.4"
easer = "0.2.1"
png = "0.16.8"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7.5"
atomic_refcell = "0.1.7"